--- a/src/app.html
+++ b/src/app.html
@@ -16,5 +16,38 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script>
+			// Register service worker
+			if ('serviceWorker' in navigator) {
+				window.addEventListener('load', () => {
+					// Get the base path from the manifest link
+					const manifestLink = document.querySelector('link[rel="manifest"]');
+					const basePath = manifestLink ? manifestLink.href.replace('/manifest.json', '') : '';
+					const swPath = basePath ? basePath + '/service-worker.js' : '/service-worker.js';
+					
+					navigator.serviceWorker.register(swPath, { scope: basePath || '/' })
+						.then((registration) => {
+							console.log('SW registered:', registration.scope);
+							
+							// Check for updates
+							registration.addEventListener('updatefound', () => {
+								const newWorker = registration.installing;
+								if (newWorker) {
+									newWorker.addEventListener('statechange', () => {
+										if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+											// New content is available, show update notification
+											if (confirm('New version available! Reload to update?')) {
+												newWorker.postMessage({ type: 'SKIP_WAITING' });
+												window.location.reload();
+											}
+										}
+									});
+								}
+							});
+						})
+						.catch((err) => console.log('SW registration failed:', err));
+				});
+			}
+		</script>
 	</body>
 </html>
